# oliepriser-api

./: .gitignore  Cargo.toml  ZoneTests.http  migrations.sql
.shuttle/: config.toml
src/: Shuttle.toml  app_state.rs  auth.rs  crud.rs  errors.rs  helpers.rs  lib.rs  main.rs  models.rs  routes.rs
src/auth/: jwt.rs  routes.rs  security.rs
src/crud/: delivery_zones.rs  prices.rs  providers.rs  scraping_runs.rs
src/models/: delivery_zones.rs  prices.rs  providers.rs  scraping_runs.rs
