[package]
name = "oliepriser-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.209", features = ["derive"] }
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
axum-macros = "0.4.1"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
once_cell = "1.19.0"
serde_json = "1.0.128"
rand = "0.8.5"
argon2 = "0.5.3"
rand_core = "0.6.4"
